--- a/sejereje.html
+++ b/sejereje.html
@@ -2,7 +2,12 @@
 <html>
     hest
     <head>
+       <link href="styles.css" rel="stylesheet">
+
     </head>
     <body>
     </body>
 </html>
+
+
+CSS
