--- a/sejereje.html
+++ b/sejereje.html
@@ -1,11 +1,8 @@
 <!DOCTYPE html>
 <html>
-    hest
     <head>
-       <link href="styles.css" rel="stylesheet">
+        <h1>Hest</h1>
     </head>
     <body>
     </body>
 </html>
-
-
