--- a/sejereje.html
+++ b/sejereje.html
@@ -5,5 +5,6 @@
         <h1>Hest</h1>
     </head>
     <body>
+        <img src = "https://i.pinimg.com/564x/ad/5d/7f/ad5d7f40d0fd3d0a94df92003d36b8ae.jpg">
     </body>
 </html>
