--- a/sejereje.html
+++ b/sejereje.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <meta charset="utf-8">
         <link href="styles.css" rel="stylesheet">
         <h1>Hest</h1>
     </head>
