--- a/sejereje.html
+++ b/sejereje.html
@@ -7,7 +7,7 @@
     </head>
     <body>
         <img src = "https://i.pinimg.com/564x/ad/5d/7f/ad5d7f40d0fd3d0a94df92003d36b8ae.jpg">
-        <img src="https://www.telegraph.co.uk/content/dam/health-fitness/2024/03/12/TELEMMGLPICT000370354413_17102731483210_trans_NvBQzQNjv4BqqVzuuqpFlyLIwiB6NTmJwfSVWeZ_vEN7c6bHu2jJnT8.jpeg?imwidth=960"
+        <img src="https://www.telegraph.co.uk/content/dam/health-fitness/2024/03/12/TELEMMGLPICT000370354413_17102731483210_trans_NvBQzQNjv4BqqVzuuqpFlyLIwiB6NTmJwfSVWeZ_vEN7c6bHu2jJnT8.jpeg?imwidth=960">
         </html>
     </body>
 </html>
