--- a/sejereje.html
+++ b/sejereje.html
@@ -8,6 +8,8 @@
     <body>
         <img src = "https://i.pinimg.com/564x/ad/5d/7f/ad5d7f40d0fd3d0a94df92003d36b8ae.jpg">
         <img src="https://www.telegraph.co.uk/content/dam/health-fitness/2024/03/12/TELEMMGLPICT000370354413_17102731483210_trans_NvBQzQNjv4BqqVzuuqpFlyLIwiB6NTmJwfSVWeZ_vEN7c6bHu2jJnT8.jpeg?imwidth=960">
-        </html>
+        <h1>Hesten (Equus ferus caballus), også kaldet tamhesten, er et vidt udbredt husdyr, med talrige racer. Tamhesten er den domesticerede form af vildhesten (Equus ferus), der sammen med æsler og zebraer udgør hestefamilien i ordenen af uparrettåede hovdyr. I Danmark findes i dag omkring 170.000 heste, der mest anvendes som sports- og hobbydyr.[1]
+
+            Hesten blev tæmmet af mennesket for henved 6.000 år siden. Tidligere har den været meget anvendt som transportmiddel og trækkraft. I Danmark var der fx i 1914 knap 600.000 heste, og Danmark var det land, næst efter Island, der havde forholdsvis flest heste.[2] Nogle tamheste er fritlevende, fx Gotlandsrusser på Gotland. Herudover findes vilde tamheste – efterkommere af undslupne tamheste, fx mustangerne i Nordamerika og Camarqueheste i Sydfrankrig.</h1>
     </body>
 </html>
