--- a/sejereje.html
+++ b/sejereje.html
@@ -4,6 +4,11 @@
         <meta charset="utf-8">
         <link href="styles.css" rel="stylesheet">
         <h1>Hest</h1>
+        <menu>
+            <li><a href=”index.html”>Home</a></li>
+            <li><a href=”omsejereje.html”>About</a></li>
+            <li><a href=”kontaktsejereje.html”>Contact</a></li>
+            </menu> 
     </head>
     <body>
         <img src = "https://i.pinimg.com/564x/ad/5d/7f/ad5d7f40d0fd3d0a94df92003d36b8ae.jpg">
