--- a/sejereje.html
+++ b/sejereje.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <link href="styles.css" rel="stylesheet">
-        <h1>Hest</h1>
+        <h1>So fetch!</h1>
         <menu>
             <li><a href=”index.html”>Home</a></li>
             <li><a href=”omsejereje.html”>About</a></li>
