--- a/sejereje.html
+++ b/sejereje.html
@@ -5,9 +5,9 @@
         <link href="styles.css" rel="stylesheet">
         <h1>So fetch!</h1>
         <menu>
-            <li><a href=”index.html”>Home</a></li>
-            <li><a href=”omsejereje.html”>About</a></li>
-            <li><a href=”kontaktsejereje.html”>Contact</a></li>
+            <li><a href=”index.html”>That was so fetch</a></li>
+            <li><a href=”omsejereje.html”>On Wednesdays we wear pink</a></li>
+            <li><a href=”kontaktsejereje.html”>Boo, you whore.</a></li>
             </menu> 
     </head>
     <body>
