--- a/sejereje.html
+++ b/sejereje.html
@@ -12,7 +12,7 @@
     </head>
     <body>
         <img src = "https://i.pinimg.com/564x/26/89/e7/2689e7689e0e85d18452d8ce4c8d1d4b.jpg">
-        <img src="https://www.telegraph.co.uk/content/dam/health-fitness/2024/03/12/TELEMMGLPICT000370354413_17102731483210_trans_NvBQzQNjv4BqqVzuuqpFlyLIwiB6NTmJwfSVWeZ_vEN7c6bHu2jJnT8.jpeg?imwidth=960">
+        <img src="https://media2.giphy.com/media/kfpl7HUfm4YWeIS56b/200w.gif">
         <h1>Honey, if someone’s yapping too much and you need a little peace, remember that a true queen handles things with grace. Here are a few tips:
 
             Change the Subject: Steer the conversation somewhere else. Sometimes, a little redirect is all it takes.
